hphp/hack/test/typecheck/is_any_array/is_any_array.php.exp
File "is_any_array.php", line 6, characters 15-16:
Invalid argument (Typing[4110])
File "is_any_array.php", line 13, characters 20-29:
Expected vec<mixed>
File "is_any_array.php", line 4, characters 7-21:
But got dict<Tk#1, T#1> from the argument to this \HH\is_any_array test
File "is_any_array.php", line 8, characters 21-22:
Invalid argument (Typing[4110])
File "is_any_array.php", line 12, characters 26-41:
Expected Container<mixed>
File "is_any_array.php", line 3, characters 15-19:
But got mixed
